--- a/colab_demo.ipynb
+++ b/colab_demo.ipynb
@@ -421,7 +421,7 @@
     }
    ],
    "source": [
-    "# Download pre-trined weights\n",
+    "# Download pre-trained weights\n",
     "!gdown https://drive.google.com/uc?id=1DUMmZGTGKMyEYSKy-w34IDHawVF24rIs\n",
     "!gdown https://drive.google.com/uc?id=1xl8cg7xaRnMsyiODcXguJ83d5hwodckB"
    ]
